[gd_scene load_steps=11 format=3 uid="uid://fgn54j014hmj"]

[ext_resource type="AudioStream" uid="uid://2j6rqmjbg2bn" path="res://Audio/concert.mp3" id="1_2ojly"]
[ext_resource type="Script" uid="uid://duvi8n71y3occ" path="res://Scenes/concerto.gd" id="1_uofcs"]
[ext_resource type="PackedScene" uid="uid://cmpltitkpy32y" path="res://Scenes/crowd.tscn" id="2_uofcs"]
[ext_resource type="PackedScene" uid="uid://dtbnixuw00kh2" path="res://Scenes/player.tscn" id="3_ott4h"]
[ext_resource type="Texture2D" uid="uid://gxjsy2fqktkw" path="res://light.png" id="4_r855x"]
[ext_resource type="Script" uid="uid://dfmdy7qvsf0xu" path="res://Scripts/point_light_2d.gd" id="5_eejkw"]
[ext_resource type="Script" uid="uid://rx8wfurnakbu" path="res://Scenes/give_delay.gd" id="5_ott4h"]

[sub_resource type="BoxMesh" id="BoxMesh_nnuko"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w8s7w"]
size = Vector2(1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_t88o3"]

[node name="Concerto" type="Node2D"]
script = ExtResource("1_uofcs")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_2ojly")

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
position = Vector2(7.99998, 17.5)
scale = Vector2(678, 433)
mesh = SubResource("BoxMesh_nnuko")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="crowdContainer7" type="Node2D" parent="."]
position = Vector2(25, -150)
script = ExtResource("5_ott4h")
base_delay = 0.08

[node name="Crowd13" parent="crowdContainer7" instance=ExtResource("2_uofcs")]
position = Vector2(-288, 0)

[node name="Crowd10" parent="crowdContainer7" instance=ExtResource("2_uofcs")]
position = Vector2(-240, 0)

[node name="Crowd8" parent="crowdContainer7" instance=ExtResource("2_uofcs")]
position = Vector2(-192, 0)

[node name="Crowd6" parent="crowdContainer7" instance=ExtResource("2_uofcs")]
position = Vector2(-144, 0)

[node name="Crowd4" parent="crowdContainer7" instance=ExtResource("2_uofcs")]
position = Vector2(-96, 0)

[node name="Crowd2" parent="crowdContainer7" instance=ExtResource("2_uofcs")]
position = Vector2(-48, 0)

[node name="Crowd11" parent="crowdContainer7" instance=ExtResource("2_uofcs")]

[node name="Crowd" parent="crowdContainer7" instance=ExtResource("2_uofcs")]
position = Vector2(48, 0)

[node name="Crowd3" parent="crowdContainer7" instance=ExtResource("2_uofcs")]
position = Vector2(96, 0)

[node name="Crowd5" parent="crowdContainer7" instance=ExtResource("2_uofcs")]
position = Vector2(144, 0)

[node name="Crowd7" parent="crowdContainer7" instance=ExtResource("2_uofcs")]
position = Vector2(192, 0)

[node name="Crowd9" parent="crowdContainer7" instance=ExtResource("2_uofcs")]
position = Vector2(240, 0)

[node name="Crowd12" parent="crowdContainer7" instance=ExtResource("2_uofcs")]
position = Vector2(288, 0)

[node name="crowdContainer6" type="Node2D" parent="."]
position = Vector2(0, -100)
script = ExtResource("5_ott4h")
base_delay = 0.09

[node name="Crowd13" parent="crowdContainer6" instance=ExtResource("2_uofcs")]
position = Vector2(-288, 0)

[node name="Crowd10" parent="crowdContainer6" instance=ExtResource("2_uofcs")]
position = Vector2(-240, 0)

[node name="Crowd8" parent="crowdContainer6" instance=ExtResource("2_uofcs")]
position = Vector2(-192, 0)

[node name="Crowd6" parent="crowdContainer6" instance=ExtResource("2_uofcs")]
position = Vector2(-144, 0)

[node name="Crowd4" parent="crowdContainer6" instance=ExtResource("2_uofcs")]
position = Vector2(-96, 0)

[node name="Crowd2" parent="crowdContainer6" instance=ExtResource("2_uofcs")]
position = Vector2(-48, 0)

[node name="Crowd11" parent="crowdContainer6" instance=ExtResource("2_uofcs")]

[node name="Crowd" parent="crowdContainer6" instance=ExtResource("2_uofcs")]
position = Vector2(48, 0)

[node name="Crowd3" parent="crowdContainer6" instance=ExtResource("2_uofcs")]
position = Vector2(96, 0)

[node name="Crowd5" parent="crowdContainer6" instance=ExtResource("2_uofcs")]
position = Vector2(144, 0)

[node name="Crowd7" parent="crowdContainer6" instance=ExtResource("2_uofcs")]
position = Vector2(192, 0)

[node name="Crowd9" parent="crowdContainer6" instance=ExtResource("2_uofcs")]
position = Vector2(240, 0)

[node name="Crowd12" parent="crowdContainer6" instance=ExtResource("2_uofcs")]
position = Vector2(288, 0)

[node name="crowdContainer5" type="Node2D" parent="."]
position = Vector2(25, -50)
script = ExtResource("5_ott4h")
base_delay = 0.1

[node name="Crowd13" parent="crowdContainer5" instance=ExtResource("2_uofcs")]
position = Vector2(-288, 0)

[node name="Crowd10" parent="crowdContainer5" instance=ExtResource("2_uofcs")]
position = Vector2(-240, 0)

[node name="Crowd8" parent="crowdContainer5" instance=ExtResource("2_uofcs")]
position = Vector2(-192, 0)

[node name="Crowd6" parent="crowdContainer5" instance=ExtResource("2_uofcs")]
position = Vector2(-144, 0)

[node name="Crowd4" parent="crowdContainer5" instance=ExtResource("2_uofcs")]
position = Vector2(-96, 0)

[node name="Crowd2" parent="crowdContainer5" instance=ExtResource("2_uofcs")]
position = Vector2(-48, 0)

[node name="Crowd11" parent="crowdContainer5" instance=ExtResource("2_uofcs")]

[node name="Crowd" parent="crowdContainer5" instance=ExtResource("2_uofcs")]
position = Vector2(48, 0)

[node name="Crowd3" parent="crowdContainer5" instance=ExtResource("2_uofcs")]
position = Vector2(96, 0)

[node name="Crowd5" parent="crowdContainer5" instance=ExtResource("2_uofcs")]
position = Vector2(144, 0)

[node name="Crowd7" parent="crowdContainer5" instance=ExtResource("2_uofcs")]
position = Vector2(192, 0)

[node name="Crowd9" parent="crowdContainer5" instance=ExtResource("2_uofcs")]
position = Vector2(240, 0)

[node name="Crowd12" parent="crowdContainer5" instance=ExtResource("2_uofcs")]
position = Vector2(288, 0)

[node name="Player2" parent="." instance=ExtResource("3_ott4h")]

[node name="CrowdContainer" type="Node2D" parent="."]

[node name="Crowd10" parent="CrowdContainer" instance=ExtResource("2_uofcs")]
position = Vector2(-240, 0)

[node name="Crowd8" parent="CrowdContainer" instance=ExtResource("2_uofcs")]
position = Vector2(-192, 0)
delay = 0.1

[node name="Crowd6" parent="CrowdContainer" instance=ExtResource("2_uofcs")]
position = Vector2(-144, 0)
delay = 0.2

[node name="Crowd4" parent="CrowdContainer" instance=ExtResource("2_uofcs")]
position = Vector2(-96, 0)
delay = 0.3

[node name="Crowd2" parent="CrowdContainer" instance=ExtResource("2_uofcs")]
position = Vector2(-48, 0)
delay = 0.4

[node name="Crowd" parent="CrowdContainer" instance=ExtResource("2_uofcs")]
position = Vector2(48, 0)
delay = 0.6

[node name="Crowd3" parent="CrowdContainer" instance=ExtResource("2_uofcs")]
position = Vector2(96, 0)
delay = 0.7

[node name="Crowd5" parent="CrowdContainer" instance=ExtResource("2_uofcs")]
position = Vector2(144, 0)
delay = 0.8

[node name="Crowd7" parent="CrowdContainer" instance=ExtResource("2_uofcs")]
position = Vector2(192, 0)
delay = 0.9

[node name="Crowd9" parent="CrowdContainer" instance=ExtResource("2_uofcs")]
position = Vector2(240, 0)
delay = 1.0

[node name="crowdContainer2" type="Node2D" parent="."]
position = Vector2(25, 50)
script = ExtResource("5_ott4h")

[node name="Crowd13" parent="crowdContainer2" instance=ExtResource("2_uofcs")]
position = Vector2(-288, 0)

[node name="Crowd10" parent="crowdContainer2" instance=ExtResource("2_uofcs")]
position = Vector2(-240, 0)

[node name="Crowd8" parent="crowdContainer2" instance=ExtResource("2_uofcs")]
position = Vector2(-192, 0)

[node name="Crowd6" parent="crowdContainer2" instance=ExtResource("2_uofcs")]
position = Vector2(-144, 0)

[node name="Crowd4" parent="crowdContainer2" instance=ExtResource("2_uofcs")]
position = Vector2(-96, 0)

[node name="Crowd2" parent="crowdContainer2" instance=ExtResource("2_uofcs")]
position = Vector2(-48, 0)

[node name="Crowd11" parent="crowdContainer2" instance=ExtResource("2_uofcs")]

[node name="Crowd" parent="crowdContainer2" instance=ExtResource("2_uofcs")]
position = Vector2(48, 0)

[node name="Crowd3" parent="crowdContainer2" instance=ExtResource("2_uofcs")]
position = Vector2(96, 0)

[node name="Crowd5" parent="crowdContainer2" instance=ExtResource("2_uofcs")]
position = Vector2(144, 0)

[node name="Crowd7" parent="crowdContainer2" instance=ExtResource("2_uofcs")]
position = Vector2(192, 0)

[node name="Crowd9" parent="crowdContainer2" instance=ExtResource("2_uofcs")]
position = Vector2(240, 0)

[node name="Crowd12" parent="crowdContainer2" instance=ExtResource("2_uofcs")]
position = Vector2(288, 0)

[node name="crowdContainer3" type="Node2D" parent="."]
position = Vector2(0, 100)
script = ExtResource("5_ott4h")
base_delay = 1.3

[node name="Crowd13" parent="crowdContainer3" instance=ExtResource("2_uofcs")]
position = Vector2(-288, 0)

[node name="Crowd10" parent="crowdContainer3" instance=ExtResource("2_uofcs")]
position = Vector2(-240, 0)

[node name="Crowd8" parent="crowdContainer3" instance=ExtResource("2_uofcs")]
position = Vector2(-192, 0)

[node name="Crowd6" parent="crowdContainer3" instance=ExtResource("2_uofcs")]
position = Vector2(-144, 0)

[node name="Crowd4" parent="crowdContainer3" instance=ExtResource("2_uofcs")]
position = Vector2(-96, 0)

[node name="Crowd2" parent="crowdContainer3" instance=ExtResource("2_uofcs")]
position = Vector2(-48, 0)

[node name="Crowd11" parent="crowdContainer3" instance=ExtResource("2_uofcs")]

[node name="Crowd" parent="crowdContainer3" instance=ExtResource("2_uofcs")]
position = Vector2(48, 0)

[node name="Crowd3" parent="crowdContainer3" instance=ExtResource("2_uofcs")]
position = Vector2(96, 0)

[node name="Crowd5" parent="crowdContainer3" instance=ExtResource("2_uofcs")]
position = Vector2(144, 0)

[node name="Crowd7" parent="crowdContainer3" instance=ExtResource("2_uofcs")]
position = Vector2(192, 0)

[node name="Crowd9" parent="crowdContainer3" instance=ExtResource("2_uofcs")]
position = Vector2(240, 0)

[node name="Crowd12" parent="crowdContainer3" instance=ExtResource("2_uofcs")]
position = Vector2(288, 0)

[node name="crowdContainer4" type="Node2D" parent="."]
position = Vector2(25, 150)
script = ExtResource("5_ott4h")
base_delay = 1.5

[node name="Crowd13" parent="crowdContainer4" instance=ExtResource("2_uofcs")]
position = Vector2(-288, 0)

[node name="Crowd10" parent="crowdContainer4" instance=ExtResource("2_uofcs")]
position = Vector2(-240, 0)

[node name="Crowd8" parent="crowdContainer4" instance=ExtResource("2_uofcs")]
position = Vector2(-192, 0)

[node name="Crowd6" parent="crowdContainer4" instance=ExtResource("2_uofcs")]
position = Vector2(-144, 0)

[node name="Crowd4" parent="crowdContainer4" instance=ExtResource("2_uofcs")]
position = Vector2(-96, 0)

[node name="Crowd2" parent="crowdContainer4" instance=ExtResource("2_uofcs")]
position = Vector2(-48, 0)

[node name="Crowd11" parent="crowdContainer4" instance=ExtResource("2_uofcs")]

[node name="Crowd" parent="crowdContainer4" instance=ExtResource("2_uofcs")]
position = Vector2(48, 0)

[node name="Crowd3" parent="crowdContainer4" instance=ExtResource("2_uofcs")]
position = Vector2(96, 0)

[node name="Crowd5" parent="crowdContainer4" instance=ExtResource("2_uofcs")]
position = Vector2(144, 0)

[node name="Crowd7" parent="crowdContainer4" instance=ExtResource("2_uofcs")]
position = Vector2(192, 0)

[node name="Crowd9" parent="crowdContainer4" instance=ExtResource("2_uofcs")]
position = Vector2(240, 0)

[node name="Crowd12" parent="crowdContainer4" instance=ExtResource("2_uofcs")]
position = Vector2(288, 0)

[node name="TriggerContainer" type="Node2D" parent="."]

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.295867, 0.295866, 0.295866, 1)

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
position = Vector2(1.90735e-06, 1.90735e-06)
scale = Vector2(0.293825, 0.293825)
color = Color(1, 0.290196, 1, 1)
texture = ExtResource("4_r855x")
script = ExtResource("5_eejkw")
radius = 15.0
speed = 0.7

[node name="PointLight2D2" type="PointLight2D" parent="."]
visible = false
position = Vector2(-208, -80)
scale = Vector2(0.293825, 0.293825)
color = Color(0.380392, 0.290196, 1, 1)
texture = ExtResource("4_r855x")
script = ExtResource("5_eejkw")
radius = 20.0
speed = 0.5

[node name="PointLight2D3" type="PointLight2D" parent="."]
visible = false
position = Vector2(232, 32)
scale = Vector2(0.293825, 0.293825)
color = Color(0.380392, 0.290196, 1, 1)
texture = ExtResource("4_r855x")
script = ExtResource("5_eejkw")
radius = 10.0

[node name="PointLight2D4" type="PointLight2D" parent="."]
visible = false
position = Vector2(-136, 136)
scale = Vector2(0.293825, 0.293825)
color = Color(0.595264, 0.246499, 0.364361, 1)
range_z_max = 2944
texture = ExtResource("4_r855x")
script = ExtResource("5_eejkw")
radius = 25.0
speed = 2.0

[node name="PointTrigger" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PointTrigger"]
position = Vector2(0, 200)
shape = SubResource("RectangleShape2D_w8s7w")

[node name="MeshInstance2D" type="MeshInstance2D" parent="PointTrigger"]
modulate = Color(0, 0.95, 0.1425, 1)
position = Vector2(0, 200)
mesh = SubResource("BoxMesh_t88o3")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Dialogue" type="Label" parent="UI"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = -179.0
offset_top = 111.0
offset_right = 181.0
offset_bottom = 156.0
theme_override_font_sizes/font_size = 11
horizontal_alignment = 1
vertical_alignment = 1
